--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream mysite {
+upstream star-burger {
     server web:8000;
 }
 
@@ -7,13 +7,13 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://mysite;
+        proxy_pass http://star-burger
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
 
     location /static/ {
-        alias /app/static/;
+        alias /star-burger/static/;
     }
 }
