--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,13 +7,17 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://star-burger
+        proxy_pass http://star-burger;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
 
     location /static/ {
-        alias /star-burger/static/;
+        alias /star-burger/star-burger/static/;
+    }
+
+    location /media/ {
+        alias /star-burger/star-burger/media/;
     }
 }
