--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - .:/star-burger/
       - static_volume:/star-burger/star-burger/static
       - media_volume:/star-burger/star-burger/media
+    restart: always
     expose:
       - 8000
     depends_on:
@@ -17,6 +18,7 @@ services:
     volumes:
       - static_volume:/star-burger/star-burger/static
       - media_volume:/star-burger/star-burger/media
+    restart: always
     ports:
       - 80:80
     depends_on:
@@ -25,6 +27,7 @@ services:
     image: postgres:13.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    restart: always
     environment:
       - POSTGRES_USER=starburger_user
       - POSTGRES_PASSWORD=4735833
