--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,12 @@ services:
       - .:/star-burger/
       - static_volume:/star-burger/star-burger/static
       - media_volume:/star-burger/star-burger/media
+      - bundles_volume:/star-burger/star-burger/bundles
     restart: always
     expose:
       - 8000
     depends_on:
-      - db
+      - frontend
   nginx:
     build: ./nginx
     volumes:
@@ -32,8 +33,18 @@ services:
       - POSTGRES_USER=starburger_user
       - POSTGRES_PASSWORD=4735833
       - POSTGRES_DB=starburger
-
+  frontend:
+    build:
+      context: ./
+      dockerfile: ./frontend/Dockerfile
+    command: parcel watch bundles-src/index.js --dist-dir bundles --public-url="./"
+    volumes:
+      - static_volume:/star-burger/star-burger/static
+      - bundles_volume:/star-burger/bundles
+    depends_on:
+      - db
 volumes:
   postgres_data:
   static_volume:
   media_volume:
+  bundles_volume:
